--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>AngularJS Seed SJ</title>
-		<link rel="stylesheet" href="/css/base.css"/>
+		<link rel="stylesheet" href="css/base.css"/>
 
         <!-- Include AngularJS source files -->
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.6/angular-cookies.min.js"></script>
 
         <!-- Javascript file that is a concatenated version of all AngularJS .js files from /js/ -->
-        <script src="/js/build.js"></script>
+        <script src="js/build.js"></script>
 
 	</head>
 	<body>
