--- a/src/app/partials/header.html
+++ b/src/app/partials/header.html
@@ -1,5 +1,10 @@
-<ul class="menu">
-    <li><a href="view1">view1</a></li>
-    <li><a href="view2">view2</a></li>
-    <li><a href="sign-in">sign-in</a></li>
-</ul>
+<div class = "full-height" ng-controller = "HeaderCtrl">
+    <div class = "table-container">
+        <div class = "header-surround">
+            <a ng-href = "/home"><div ui-route = "/home" ng-class = "{'header-box-clicked': $uiRoute, 'header-box' :!$uiRoute}">Home</div></a>
+            <a ng-href = "/blog"><div ui-route = "/blog" ng-class = "{'header-box-clicked': $uiRoute, 'header-box' :!$uiRoute}">Blog</div></a>
+            <a ng-href = "/portfolio/1"><div ui-route = "/portfolio/:page" ng-class = "{'header-box-clicked': $uiRoute, 'header-box' :!$uiRoute}">Portfolio</div></a>
+            <a ng-href = "/contact-us"><div ui-route = "/contact-us" ng-class = "{'header-box-clicked': $uiRoute, 'header-box' :!$uiRoute}">Contact Us</div></a>
+        </div>
+    </div>
+</div>
